Bug 40234 - Weborder - scroll bar is not fully visible for product modifiers

--- a/skins/weborder/css/modifiers.css
+++ b/skins/weborder/css/modifiers.css
@@ -1,6 +1,6 @@
 .modifiers_table {
     margin: 20px 20px 0;
-    padding: 17px 14px;
+    padding: 17px 5px;
     overflow: hidden;
     position: relative;
     border-radius: 10px 10px 10px 10px;
